package in.ashwanik.pdp.iterator;

import lombok.Builder;
import lombok.Getter;

@Getter
@Builder
public class SearchFilter {
    private int page;
}
