@startuml

title __ITERATOR's Class Diagram__\n

  namespace in.ashwanik.pdp.iterator {
    class in.ashwanik.pdp.iterator.DefaultGithubJobClientContract {
        + getJobs()
    }
  }
  

  namespace in.ashwanik.pdp.iterator {
    class in.ashwanik.pdp.iterator.GithubJobRepository {
        + GithubJobRepository()
        + getJobs()
    }
  }
  

  namespace in.ashwanik.pdp.iterator {
    class in.ashwanik.pdp.iterator.GithubPagedResult {
        - index : int
        - nextPage : Function<P, P>
        + GithubPagedResult()
        + hasNext()
        + iterator()
        + next()
    }
  }
  

  namespace in.ashwanik.pdp.iterator {
    class in.ashwanik.pdp.iterator.SearchFilter {
        - page : int
        {static} + builder()
        + getPage()
        ~ SearchFilter()
    }
  }
  

  namespace in.ashwanik.pdp.iterator {
    class in.ashwanik.pdp.iterator.SearchFilter.SearchFilterBuilder {
        - page : int
        + build()
        + page()
        + toString()
        ~ SearchFilterBuilder()
    }
  }
  

  in.ashwanik.pdp.iterator.DefaultGithubJobClientContract .up.|> in.ashwanik.pdp.common.githubjobs.GithubJobClientContract
  in.ashwanik.pdp.iterator.GithubJobRepository o-- in.ashwanik.pdp.builder.GithubJobClient : jobClient
  in.ashwanik.pdp.iterator.GithubPagedResult .up.|> java.lang.Iterable
  in.ashwanik.pdp.iterator.GithubPagedResult .up.|> java.util.Iterator
  in.ashwanik.pdp.iterator.GithubPagedResult o-- P : pageCollection
  in.ashwanik.pdp.iterator.SearchFilter +-down- in.ashwanik.pdp.iterator.SearchFilter.SearchFilterBuilder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
